// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba para el componente <MultipleCustomHooks /> debe mostrar información 1`] = `
<Fragment>
  <h1
    className="mt-5"
  >
    Breaking Bad 
    <span
      className="fs-3"
    >
      (Query API)
    </span>
  </h1>
  <hr />
  <blockquote
    className="blockquote p-5 mb-4 bg-light rounded-3 text-end"
  >
    <h2
      className="mb-5"
    >
      A quote
    </h2>
    <footer
      className="blockquote-footer"
    >
      Developer
    </footer>
  </blockquote>
  <button
    className="btn btn-primary float-end"
    onClick={[Function]}
  >
    Siguiente quote
  </button>
</Fragment>
`;

exports[`Prueba para el componente <MultipleCustomHooks /> debe mostrarse correctamente 1`] = `
<Fragment>
  <h1
    className="mt-5"
  >
    Breaking Bad 
    <span
      className="fs-3"
    >
      (Query API)
    </span>
  </h1>
  <hr />
  <div
    className="alert alert-info text-center"
    role="alert"
  >
    Cargando...
  </div>
</Fragment>
`;
